syntax = "proto3";

option go_package = "github.com/shabunin/cardia/proto";

message AuthSuccess {
    string token = 1;
}

message AuthPasswordReq {
    string account = 1;
    string password = 2;
}
message AuthPasswordRes {
    AuthSuccess result = 1;
}

message AuthPubkeyReq {
    string account = 1;
    string pubkey_algorithm = 2;
    bytes pubkey_blob = 3;
    bytes signature = 4;
}
message AuthPubkeyRes {
    oneof payload {
        bytes sign_request = 1;
        AuthSuccess result = 2;
    }
}

service Authentication {
    rpc PasswordAuth(AuthPasswordReq) returns (AuthPasswordRes);
    rpc PubkeyAuth(stream AuthPubkeyReq) returns (stream AuthPubkeyRes);
}
